--- a/pages/subpages/mall/hotel/subpages/hotel-detail/subpages/more-info/index.wxss
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/subpages/more-info/index.wxss
@@ -2,21 +2,17 @@
   position: fixed;
   top: 0;
   left: 0;
-  display: flex;
-  flex-wrap: nowrap;
   width: 100%;
-  height: 44px;
   background: #fff;
   border-top: 1px solid #f5f6f7;
   box-shadow: 0 1px 1px 0 rgba(0,0,0,0.05);
   z-index: 100;
 }
 .menu-item {
-  padding: 0 12px;
+  flex: 1;
   height: 44px;
   color: #999;
   font-size: 14px;
-  white-space: nowrap;
 }
 .menu-item.active {
   position: relative;
@@ -41,64 +37,58 @@
   padding-bottom: calc(24rpx + env(safe-area-inset-bottom));
 }
 
-.card {
-  margin-bottom: 24rpx;
-  padding: 24rpx;
-  background: #fff;
-  border-radius: 18rpx;
-}
+
 .card-title {
+  margin-bottom: 24rpx;
   color: #333;
   font-size: 28rpx;
   font-weight: bold;
   line-height: 1;
 }
+.card {
+  margin-bottom: 48rpx;
+  padding: 24rpx;
+  background: #fff;
+  border-radius: 18rpx;
+}
 
-.introduction {
-  margin-top: 18rpx;
+.hotel-name {
+  color: #333;
+  font-size: 28rpx;
+  font-weight: bold;
+}
+.more-info {
+  margin-top: 8rpx;
   color: #666;
   font-size: 24rpx;
 }
-.toggle-fold-btn {
-  margin-left: 12rpx;
-  color: #77a9fd;
+
+.hotel-tel-wrap {
+  margin-top: 18rpx;
+  font-size: 26rpx;
+}
+.tel-label {
+  color: #333;
   font-weight: bold;
 }
-
-.grid {
-  margin-top: 24rpx;
-  border-radius: 18rpx;
-  border: 1px solid #ddecf6;
-  overflow: hidden;
+.hotel-tel {
+  color: #666;
+  font-weight: bold;
 }
-.grid-line {
-  display: flex;
-  border-bottom: 1px solid #ddecf6;
-}
-.grid-line:last-child {
-  border-bottom: none;
-}
-.grid-line.title {
-  background: #EEF2F5;
-}
-.grid-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 18rpx;
-  flex: 1;
+.contact-btn {
+  margin-left: 24rpx;
+  padding: 0 12rpx;
+  height: 48rpx;
   color: #333;
+  font-size: 22rpx;
+  border: 1px solid #ddd;
+  border-radius: 24rpx;
+}
+
+.brief {
+  margin-top: 24rpx;
+  color: #666;
   font-size: 24rpx;
-  border-right: 1px solid #ddecf6;
-}
-.grid-item:last-child {
-  border-right: none;
-}
-.grid-item.main {
-  flex: 3;
-}
-.grid-item.content {
-  justify-content: flex-start;
 }
 
 .warning-tips {
@@ -115,74 +105,4 @@
   content: "*";
   font-size: 18rpx;
   color: #999;
-}
-
-.tel {
-  padding: 24rpx 0;
-  color: #333;
-  font-size: 24rpx;
-  border-bottom: 1px solid #f5f6f7;
-}
-.tel:last-child {
-  padding-bottom: 0;
-  border-bottom: none;
-}
-.tel-icon {
-  width: 48rpx;
-  height: 48rpx;
-}
-
-.facility-wrap {
-  margin-top: 24rpx;
-}
-.facility-btn {
-  margin-right: 24rpx;
-  padding: 12rpx;
-  border: 1px solid #ddd;
-  border-radius: 8rpx;
-}
-.facility-btn.active {
-  background: #EEF2F5;
-  border: 1px solid #9abaf0;
-}
-.facility-icon {
-  width: 42rpx;
-  height: 42rpx;
-}
-.facility-info {
-  margin-top: 24rpx;
-  padding: 18rpx;
-  font-size: 24rpx;
-  background: #f5f6f7;
-  border-radius: 8rpx;
-}
-.facility-name {
-  color: #333;
-  font-weight: bold;
-}
-.facility-content {
-  margin-top: 8rpx;
-  color: #666;
-}
-
-.tips-list {
-  font-size: 24rpx;
-}
-.tips-item {
-  display: flex;
-  padding: 24rpx 0;
-  border-bottom: 1px solid #f5f6f7;
-}
-.tips-item:last-child {
-  padding-bottom: 0;
-  border-bottom: none;
-}
-.tips-title {
-  flex: 1;
-  color: #333;
-  font-weight: bold;
-}
-.tips-content {
-  flex: 4;
-  color: #666;
 }
